--- a/dragon quest.html
+++ b/dragon quest.html
@@ -10,13 +10,35 @@
 
 	<div class="box2"><p> HP &ensp;&ensp;100&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;100&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;100<br><br>MP&ensp;&ensp;100&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;100&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;100<br><br>LVL&ensp;4&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp; 3&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;5<br></p> 
 	<div class='container'>
-		<img src='https://i.pinimg.com/originals/d0/f6/a1/d0f6a1f40558e2ea33bf12f54eba71dd.gif'>
+		<img src='https://i.pinimg.com/originals/d0/f6/a1/d0f6a1f40558e2ea33bf12f54eba71dd.gif' >
+		
 		
 	<div class="box3"><p>Fight<br><br>Spell<br><br>Parry<br><br> -> Item</p>
 	<div class="box4"><p>Antidote :<br>Herbe<br>Objet :<br> -> Pokéball<br>Ressource :<br>Oeil de Dragon</p>
 	<div class="box5"><p><br><br>OFFENSIVE</p>
 	<progress id="VieDuMonstre1" valeur="100" max="100"></progress>
-	</div>
+	
+	<section class="ImgMonstre">
+		<div class="Ennemis" id="Montre1">
+		<img id="Ennemis" src="nomdel'image" alt="">
+	
+
+
+
+
+	<section id="Infobulle1">
+		<div class="StatMonstre" id="Stat1">
+		<div> <span id="PvMonstre1"> <strong> 100 </strong> </span>PV<strong></strong>
+
+	<section>
+		<div class="Fight"> <strong><u>Fight</u></strong>
+		<div class="Spell"> <strong><u>Spell</u></strong>
+		<div class="Parry"> <strong><u>Parry</u></strong>
+		<div class="Item" > <strong><u> Item</u></strong>
+	</section>
+
+	</section>
+	</div> 
 
 </body>
 </html>
