--- a/dragon quest.html
+++ b/dragon quest.html
@@ -21,7 +21,10 @@
 	<section class="ImgMonstre">
 		<div class="Ennemis" id="Montre1">
 		<img id="Ennemis" src="nomdel'image" alt="">
-	
+		<div class="Ennemis" id="Monstre2">
+		<img id="Ennemis" src="nomdel'image2" alt="">
+		<div class="Ennemis" id="Monstre3">
+		<img id="Ennemis" src="nomdel'image3" alt="">
 
 
 
@@ -38,7 +41,7 @@
 	</section>
 
 	</section>
-	</div> 
+	</div>
 
 </body>
 </html>
