--- a/dragon quest.html
+++ b/dragon quest.html
@@ -9,9 +9,6 @@
 	<div class="box"><p>&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;Justin &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp; Kévin &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp; Ventux</p></div>
 
 	<div class="box2"><p> HP &ensp;&ensp;100&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;100&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;100<br><br>MP&ensp;&ensp;100&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;100&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;100<br><br>LVL&ensp;4&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp; 3&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;5<br></p> 
-	<div class='container'>
-		<img src='https://i.pinimg.com/originals/d0/f6/a1/d0f6a1f40558e2ea33bf12f54eba71dd.gif' >
-		
 		
 	<div class="box3"><p>Fight<br><br>Spell<br><br>Parry<br><br> -> Item</p>
 	<div class="box4"><p>Antidote :<br>Herbe<br>Objet :<br> -> Pokéball<br>Ressource :<br>Oeil de Dragon</p>
@@ -19,8 +16,8 @@
 	<progress id="VieDuMonstre1" valeur="100" max="100"></progress>
 	
 	<section class="ImgMonstre">
-		<div class="Ennemis" id="Montre1">
-		<img id="Ennemis" src="nomdel'image" alt="">
+		<div class="Ennemis" id="Monstre1">
+		<img id="Ennemis" src="./slime2.gif" alt="">
 		<div class="Ennemis" id="Monstre2">
 		<img id="Ennemis" src="nomdel'image2" alt="">
 		<div class="Ennemis" id="Monstre3">
@@ -32,7 +29,7 @@
 	<section id="Infobulle1">
 		<div class="StatMonstre" id="Stat1">
 		<div> <span id="PvMonstre1"> <strong> 100 </strong> </span>PV<strong></strong>
-
+		<div> <span id="AttMonstre1"> <strong> 5 </strong> </span>ATT<strong></strong> </span>
 	<section>
 		<div class="Fight"> <strong><u>Fight</u></strong>
 		<div class="Spell"> <strong><u>Spell</u></strong>
