--- a/dragon quest.html
+++ b/dragon quest.html
@@ -1,44 +1,47 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<link rel="stylesheet" type="text/css" href="lecssdujeu.css">
-	<meta charset="utf-8">
-	<title>Dragon Battle 6</title>
-</head>
-<body>
-	<div class="box"><p>&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;Justin &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp; Kévin &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp; Ventux</p></div>
-
-	<div class="box2"><p> HP &ensp;&ensp;100&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;100&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;100<br><br>MP&ensp;&ensp;100&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;100&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;100<br><br>LVL&ensp;4&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp; 3&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;5<br></p> 
-		
-	<div class="box3"><p>Fight<br><br>Spell<br><br>Parry<br><br> -> Item</p>
-	<div class="box4"><p>Antidote :<br>Herbe<br>Objet :<br> -> Pokéball<br>Ressource :<br>Oeil de Dragon</p>
-	<div class="box5"><p><br><br>OFFENSIVE</p>
-	<progress id="VieDuMonstre1" valeur="100" max="100"></progress>
+	<head>
+		<title>Dragon Battle 6</title>
+		<link rel="stylesheet" type="text/css" href="lecssdujeu.css">
+		<link rel="stylesheet" type="text/css" href="letextdujeu.css">
+		<meta charset="utf-8">
 	
-	<section class="ImgMonstre">
-		<div class="Ennemis" id="Monstre1">
-		<img id="Ennemis" src="./slime2.gif" alt="">
-		<div class="Ennemis" id="Monstre2">
-		<img id="Ennemis" src="nomdel'image2" alt="">
-		<div class="Ennemis" id="Monstre3">
-		<img id="Ennemis" src="nomdel'image3" alt="">
+	</head>
+	<body>
+		<div class="box"><p>&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;Justin &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp; Kévin &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp; Ventux</p></div>
 
-
-
-
-	<section id="Infobulle1">
-		<div class="StatMonstre" id="Stat1">
-		<div> <span id="PvMonstre1"> <strong> 100 </strong> </span>PV<strong></strong>
-		<div> <span id="AttMonstre1"> <strong> 5 </strong> </span>ATT<strong></strong> </span>
-	<section>
-		<div class="Fight"> <strong><u>Fight</u></strong>
-		<div class="Spell"> <strong><u>Spell</u></strong>
-		<div class="Parry"> <strong><u>Parry</u></strong>
-		<div class="Item" > <strong><u> Item</u></strong>
-	</section>
-
-	</section>
+		<div class="box2"><p> HP &ensp;&ensp;100&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;100&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;100<br><br>MP&ensp;&ensp;100&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;100&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;100<br><br>LVL&ensp;4&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp; 3&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;5<br></p> 
+		
+		<div class="box3"><p>Fight<br><br>Spell<br><br>Parry<br><br> -> Item</p>
+		<div class="box4"><p>Antidote :<br>Herbe<br>Objet :<br> -> Pokéball<br>Ressource :<br>Oeil de Dragon</p>
+		<div class="box5"><p><br><br>OFFENSIVE</p>
+		</div>
+		<progress id="VieDuMonstre1" valeur="100" max="100"></progress>
+	
+		
+		<div class="Ennemis1" id="Monstre1">
+		<img id="Ennemis" src="https://opengameart.org/sites/default/files/slime.jiggle.icon_.png" alt="">
+	</div>
+		
+		<div class="Ennemis2" id="Monstre2">
+		<img id="Ennemis" src="https://opengameart.org/sites/default/files/slime.jiggle.icon_.png" alt="">
+	</div>	
+		<div class="Ennemis3" id="Monstre3">
+		<img id="Ennemis" src="https://opengameart.org/sites/default/files/slime.jiggle.icon_.png" alt="">
 	</div>
 
-</body>
+
+
+		<div class="Infobulle1" src="">
+			<span class="Infobulle1Texte">  </span></div>	
+	
+		<button class="btn1">Attack</button>
+			
+			<div class="Spell">
+			<div class="Parry"> 
+			<div class="Item" >
+
+		</div>
+
+	</body>
 </html>
