--- a/dragon quest.html
+++ b/dragon quest.html
@@ -8,6 +8,9 @@
 	
 	</head>
 	<body>
+		<div id="Victoire" src=""></div>
+		<div id="Defaite"> Défaite</div>
+
 		<div class="box"><p>&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;Justin &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp; Kévin &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp; Ventux</p></div>
 
 		<div class="box2"><p> HP &ensp;&ensp;100&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;100&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;100<br><br>MP&ensp;&ensp;100&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;100&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;100<br><br>LVL&ensp;4&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp; 3&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;5<br></p> 
