--- a/dragon quest.html
+++ b/dragon quest.html
@@ -8,48 +8,47 @@
 	
 	</head>
 	<body>
-		<div id="Victoire" src=""></div>
+		<div class="Ennemis"> 
+          <div> Ennemis : </div>
+          <button id="btnSlime"> Slime </button>
+          <button id="btnSlume"> Slume </button> 
+          <button id="btnFlime"> Flime </button> 
+         </div>
+		<div id="Victoire"> Victoire </div>
 		<div id="Defaite"> Défaite</div>
 
-		<div class="box"><p>&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;Justin &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp; Kévin &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp; Ventux</p></div>
-
-		<div class="box2"><p> HP &ensp;&ensp;100&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;100&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;100<br><br>MP&ensp;&ensp;100&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;100&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;100<br><br>LVL&ensp;4&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp; 3&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;5<br></p> 
+		<div class="box2">Slime <br>Slume <br>Flime</p> 
 		</div>
-		<div class="box3"><p>Fight<br><br>Spell<br><br>Parry<br><br> -> Item</p>
-		</div>
+		<div class="box3"> <br> <br>  </div>
 		<div class="box4"><p>Antidote :<br>Herbe<br>Objet :<br> -> Pokéball<br>Ressource :<br>Oeil de Dragon</p>
 		</div>
-		<div class="box5"><p><br><br>OFFENSIVE</p>
+		<div class="box5">OFFENSIVE
 		</div>
 		
+		<Infobulle>
+
+			<div class="Ennemis1" id="Monstre1">
+				<img id="Ennemis1" src="https://opengameart.org/sites/default/files/slime.jiggle.icon_.png" alt="">
+				<div class="boxMonstre1"><p>NOM: Slime<br> <br>HP: 100<br> <br>DEF: 0</p></div>
+			</div>
 		
-		<div class="Ennemis1" id="Monstre1">
-		<img id="Ennemis" src="https://opengameart.org/sites/default/files/slime.jiggle.icon_.png" alt="">
-		<div class="boxMonstre1"><p>NOM: Slime<br> <br>HP: 100<br> <br>DEF: 0</p></div>
-	</div>
+				<div class="Ennemis2" id="Monstre2">
+				<img id="Ennemis2" src="https://opengameart.org/sites/default/files/slime.jiggle.icon_.png" alt="">
+				<div class="boxMonstre2"><p>NOM: Slume<br> <br>HP: 100<br> <br>DEF: 0</p></div>
+			</div>	
+				<div class="Ennemis3" id="Monstre3">
+				<img id="Ennemis3" src="https://opengameart.org/sites/default/files/slime.jiggle.icon_.png" alt="">
+				<div class="boxMonstre3"><p>NOM: Flime<br> <br>HP: 100<br> <br>DEF: 0</p></div>
+			</div>
+		</Infobulle>
+
+		<action>
+		<button class="btnAttaque">Attaque</button>
+		<button class="btnDefense">Defense</button>
+		<button class="btnMagie"> Magie</button>
+		<button class="btnObjet">Objets</button>
+		</action>	
 		
-		<div class="Ennemis2" id="Monstre2">
-		<img id="Ennemis" src="https://opengameart.org/sites/default/files/slime.jiggle.icon_.png" alt="">
-		<div class="boxMonstre2"><p>NOM: Slume<br> <br>HP: 100<br> <br>DEF: 0</p></div>
-	</div>	
-		<div class="Ennemis3" id="Monstre3">
-		<img id="Ennemis" src="https://opengameart.org/sites/default/files/slime.jiggle.icon_.png" alt="">
-		<div class="boxMonstre3"><p>NOM: Flime<br> <br>HP: 100<br> <br>DEF: 0</p></div>
-	</div>
-
-
-
-		<div class="Infobulle1" src="">
-			<span class="Infobulle1Texte">  </span></div>	
-
-		<button class="btn1">Attack</button>
-			
-			<div class="Spell">
-			</div>
-			<div class="Parry"> 
-			</div>
-			<div class="Item" >	
-			</div>
 
 	</body>
 </html>
