--- a/dragon quest.html
+++ b/dragon quest.html
@@ -8,6 +8,10 @@
 	
 	</head>
 	<body>
+		<audio id="music" controls autoplay loop preload="auto">
+			<source src="https://opengameart.org/sites/default/files/The%20Fallen%20MP3_0.mp3" type="audio/mp3">
+		</audio>
+
 		<div class="Ennemis">Choix de l'ennemis : </div>
           <button id="btnSlime"> Slime </button>
           <button id="btnSlume"> Slume </button> 
@@ -19,8 +23,13 @@
 		<div class="box2"> <br> <br>
 		</div>
 		<div class="box3"> <br> <br>  </div>
-		<div class="box4"><p>Antidote :<br>Herbe<br>Objet :<br> -> Pokéball<br>Ressource :<br>Oeil de Dragon</p>
-		</div>
+		<div class="box4"> <br></div> 
+
+		<div class="perso">
+          <button id="btnKevin"> Kévin  </button>
+          <button id="btnJustin"> Justin </button> 
+          <button id="btnVentux"> Ventux </button></div>
+		
 		<div class="box5">OFFENSIVE
 		</div>
 		
