--- a/dragon quest.html
+++ b/dragon quest.html
@@ -16,19 +16,39 @@
           <button id="btnSlime"> Slime </button>
           <button id="btnSlume"> Slume </button> 
           <button id="btnFlime"> Flime </button> 
-         </div>
+        </div>
 		<div id="Victoire"> Victoire </div>
 		<div id="Defaite"> Défaite</div>
 
 		<div class="box2"> <br> <br>
 		</div>
 		<div class="box3"> <br> <br>  </div>
-		<div class="box4"> <br></div> 
+		<div class="box4"> <br></div>
+		<PV>
+         	<div> HP : <h id="PVJustin"> 150 </h> </div> <div> HP : <h id="PVKevin"> 150 </h> </div>
+        	<div > HP : <h id="PVVentux"> 150 </h> </div> <div> HP : <h id="PVMoun"> 150 </h> </div>
+		</PV>
+
+		<MANA>
+			<div> MP : <h id="MANAJustin"> 80 </h> </div> <div> MP <h id="MANAKevin"> 80 </h> </div>
+        	<div> MP <h id="MANAVentux"> 80 </h> </div> <div> MP : <h id="MANAMoun"> 80 </h> </div>
+		</MANA>
+
+		<DEF>
+			<div> DEF : <h id="DEFJustin"> 0 </h> </div> <div> DEF : <h id="DEFKevin"> 5 </h> </div>
+        	<div> DEF : <h id="DEFVentux"> 10 </h> </div> <div> DEF : <h id="DEFMoun"> 1 </h> </div>
+		</DEF>
+
+		<LVL>
+			<div> LVL : <h id="LVLJustin"> 2 </h> </div> <div> LVL : <h id="LVLKevin"> 5 </h> </div>
+        	<div> LVL : <h id="LVLVentux"> 10 </h> </div> <div> LVL : <h id="LVLMoun"> 15 </h> </div>
+        </LVL>			
 
 		<div class="perso">
-          <button id="btnKevin"> Kévin  </button>
-          <button id="btnJustin"> Justin </button> 
-          <button id="btnVentux"> Ventux </button></div>
+        	<button id="btnKevin"> Kévin  </button>
+        	<button id="btnJustin"> Justin </button> 
+        	<button id="btnVentux"> Ventux </button>
+      		<button id="btnMoun"> Moun </button></div>
 		
 		<div class="box5">OFFENSIVE
 		</div>
@@ -51,11 +71,18 @@
 		</Infobulle>
 
 		<action>
-		<button class="btnAttaque" id="BoutonAttaque">Attaque</button>
-		<button class="btnDefense" id="BoutonDefense">Defense</button>
-		<button class="btnMagie" id="BoutonMagie"> Magie</button>
-		<button class="btnObjet" id="BoutonObjet">Objets</button>
+		<button id="btnAttaque">Attaque</button>
+		<button id="btnDefense">Defense</button>
+		<button id="btnMagie"> Magie</button>
+		<button id="btnObjet">Objets</button>
 		</action>	
+
+		<AtSPE>
+		<button id="btnSoin"> Heal</button>
+		<button id="btnFeu" > Feu</button>
+		<button id="btnGlace"> GLace</button>
+		<button id="btnPoison"> Poison</button>
+		</AtSPE>
 		
 		<script type="text/javascript" src="Lejsdujeu.js"></script>
 
