--- a/dragon quest.html
+++ b/dragon quest.html
@@ -30,8 +30,8 @@
 		</PV>
 
 		<MANA>
-			<div> MP : <h id="MANAJustin"> 80 </h> </div> <div> MP <h id="MANAKevin"> 80 </h> </div>
-        	<div> MP <h id="MANAVentux"> 80 </h> </div> <div> MP : <h id="MANAMoun"> 80 </h> </div>
+			<div> MP : <h id="MANAJustin"> 80 </h> </div> <div> MP : <h id="MANAKevin"> 80 </h> </div>
+        	<div> MP : <h id="MANAVentux"> 80 </h> </div> <div> MP : <h id="MANAMoun"> 80 </h> </div>
 		</MANA>
 
 		<DEF>
@@ -56,17 +56,17 @@
 		<Infobulle>
 
 			<div class="Ennemis1" id="Monstre1">
-				<img id="Ennemis1" src="https://opengameart.org/sites/default/files/slime.jiggle.icon_.png" alt="">
-				<div id="boxMonstre1"><p>NOM: Slime<br> <br>HP: <h id=PVSlime>100</h><br><br>DEF: 0</p></div>
+				<img id="Ennemis1" src="https://opengameart.org/sites/default/files/slime.jiggle.icon_.png">
+				<div id="boxMonstre1"><p>NOM: Slime<br> <br>HP: <h id="PVSlime">100</h><br><br>DEF: 0</p></div>
 			</div>
 		
 				<div class="Ennemis2" id="Monstre2">
 				<img id="Ennemis2" src="https://opengameart.org/sites/default/files/slime.jiggle.icon_.png" alt="">
-				<div id="boxMonstre2"><p>NOM: Slume<br> <br>HP: <h id=PVSlume>100</h><br> <br>DEF: 0</p></div>
+				<div id="boxMonstre2"><p>NOM: Slume<br> <br>HP: <h id="PVSlume">100</h><br> <br>DEF: 0</p></div>
 			</div>	
 				<div class="Ennemis3" id="Monstre3">
 				<img id="Ennemis3" src="https://opengameart.org/sites/default/files/slime.jiggle.icon_.png" alt="">
-				<div id="boxMonstre3"><p>NOM: Flime<br> <br>HP: <h id=PVFlime>100</h><br> <br>DEF: 0</p></div>
+				<div id="boxMonstre3"><p>NOM: Flime<br> <br>HP: <h id="PVFlime">100</h><br> <br>DEF: 0</p></div>
 			</div>
 		</Infobulle>
 
@@ -77,12 +77,12 @@
 		<button id="btnObjet">Objets</button>
 		</action>	
 
-		<AtSPE>
-		<button id="btnSoin"> Heal</button>
+		<section id="AttSpe">
+		<button id="btnSoin"> Soin</button>
 		<button id="btnFeu" > Feu</button>
-		<button id="btnGlace"> GLace</button>
+		<button id="btnGlace"> Glace</button>
 		<button id="btnPoison"> Poison</button>
-		</AtSPE>
+		</section>
 		
 		<script type="text/javascript" src="Lejsdujeu.js"></script>
 
