--- a/dragon quest.html
+++ b/dragon quest.html
@@ -11,6 +11,14 @@
 		<audio id="music" controls autoplay loop preload="auto">
 			<source src="https://opengameart.org/sites/default/files/The%20Fallen%20MP3_0.mp3" type="audio/mp3">
 		</audio>
+		
+		<audio id="musicVictoire" controls autoplay preload="auto">
+			<source src="https://opengameart.org/sites/default/files/Victory.mp3" type="audio/mp3">
+		</audio>
+			
+		<audio id="musicDefaite" autoplay preload="auto">
+			<source src="https://opengameart.org/sites/default/files/audio_preview/Depressed%20of%20Happytown.ogg.mp3" type="audio/mp3">
+		</audio>
 
 		<div class="Ennemis">Choix de l'ennemis : </div>
           <button id="btnSlime"> Slime </button>
@@ -30,13 +38,13 @@
 		</PV>
 
 		<MANA>
-			<div> MP : <h id="MANAJustin"> 80 </h> </div> <div> MP : <h id="MANAKevin"> 80 </h> </div>
-        	<div> MP : <h id="MANAVentux"> 80 </h> </div> <div> MP : <h id="MANAMoun"> 80 </h> </div>
+			<div> MP : <h id="MANAJustin"> 100 </h> </div> <div> MP : <h id="MANAKevin"> 100 </h> </div>
+        	<div> MP : <h id="MANAVentux"> 100 </h> </div> <div> MP : <h id="MANAMoun"> 100 </h> </div>
 		</MANA>
 
 		<DEF>
-			<div> DEF : <h id="DEFJustin"> 0 </h> </div> <div> DEF : <h id="DEFKevin"> 5 </h> </div>
-        	<div> DEF : <h id="DEFVentux"> 10 </h> </div> <div> DEF : <h id="DEFMoun"> 1 </h> </div>
+			<div> DEF : <h id="DEFJustin"> 5 </h> </div> <div> DEF : <h id="DEFKevin"> 5 </h> </div>
+        	<div> DEF : <h id="DEFVentux"> 5 </h> </div> <div> DEF : <h id="DEFMoun"> 5 </h> </div>
 		</DEF>
 
 		<LVL>
