--- a/dragon quest.html
+++ b/dragon quest.html
@@ -12,11 +12,11 @@
 			<source src="https://opengameart.org/sites/default/files/The%20Fallen%20MP3_0.mp3" type="audio/mp3">
 		</audio>
 		
-		<audio id="musicVictoire" controls autoplay preload="auto">
+		<audio id="musicVictoire" controls preload="auto">
 			<source src="https://opengameart.org/sites/default/files/Victory.mp3" type="audio/mp3">
 		</audio>
 			
-		<audio id="musicDefaite" autoplay preload="auto">
+		<audio id="musicDefaite" controls preload="auto">
 			<source src="https://opengameart.org/sites/default/files/audio_preview/Depressed%20of%20Happytown.ogg.mp3" type="audio/mp3">
 		</audio>
 
